--- a/package.json
+++ b/package.json
@@ -1,5 +1,19 @@
-{
-  "dependencies": {
-    "mariadb": "^3.3.2"
-  }
+{"name": "expresso-schaklewski",
+"version": "1.0.0",
+"main": "index.js",
+"type": "module",
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+},
+"author": "Sven Schaklewski",
+"license": "MIT",
+"description": "",
+"devDependencies": {
+  "nodemon": "^3.1.7"
+},
+"dependencies": {
+  "mariadb": "^3.3.2"
+}
 }
