--- a/package.json
+++ b/package.json
@@ -1,1 +1,29 @@
-{"name":"node-repo-felde","version":"1.0.0","main":"index.js","type":"module","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node index.js","dev":"nodemon index.js","dev-db":"test-db.js"},"author":"Sergej Felde","license":"MIT","description":"","devDependencies":{"nodemon":"^3.1.7"},"repository":{"type":"git","url":"https://github.com/sfelde3/Node-Repo-Felde/blob/main/test-db.js"},"keywords":["node","express","web","coffee"],"dependencies":{"bcryptjs":"^2.4.3","ejs":"^3.1.10","express":"^4.21.1","jsonwebtoken":"^9.0.2","mariadb":"^3.3.2"}}
+{
+"name":"node-repo-felde",
+"version":"2.1.0",
+"main":"index.js",
+"type":"module",
+"scripts":{
+    "test":"echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js",
+    "dev":"nodemon index.js",
+    "dev-db":"test-db.js"},
+    "author":"Sergej Felde",
+    "license":"MIT",
+    "description":"Ünungsproject",
+    "devDependencies":{"nodemon":"^3.1.7"},
+    "repository":{"type":"git",
+    "url":"https://github.com/sfelde3/Node-Repo-Felde/blob/main/test-db.js"},
+    "keywords":[
+        "node",
+        "express",
+        "web",
+        "coffee"],
+        "dependencies":{
+            "bcryptjs":"^2.4.3",
+            "ejs":"^3.1.10",
+            "express":"^4.21.1",
+            "jsonwebtoken":"^9.0.2",
+            "mariadb":"^3.3.2"
+            }
+        }
